--- a/predictionUI/html/index.html
+++ b/predictionUI/html/index.html
@@ -72,8 +72,16 @@
 	</noscript>
 
     <div style="width: 43%; background-color: white; padding: 4px; font-family: sans-serif; float:right;">
-    <h3 style="margin-top: 0">cpLogD - confidence predictor for logD using conformal regression and a support-vector machine</h3>
-    Draw your molecule in the editor, the prediction underneath will update as you draw. The model predicts Log D based on a support vector machine trained on data from ChEMBL version 23. The confidence intervall is calculated for the confidence specified by the slider using the conformal prediction approach.
+    <h3 style="margin-top: 0">cpLogD - confidence predictor for logD</h3>
+    <i>Instructions</i>: Draw your molecule in the editor, the prediction underneath will update as you draw. 
+    
+    <p>
+    The model predicts Log D based on a support vector machine trained on data from ChEMBL version 23 comprising approximately 1.6 million compounds. The confidence interval is calculated for the confidence specified by the slider using the conformal prediction approach. For citing this service and for more information:
+   
+    <p>
+    <b>A confidence predictor for logD using conformal regression and a support-vector machine</b><br>
+    Maris Lapins, Staffan Arvidsson, Samuel Lampa, Arvid Berg, Wesley Schaal, Jonathan Alvarsson and Ola Spjuth<br>
+    [<i>Submitted</i>]
     </div>
  
     <div id="jsme_container" style="width=57%; float=left;"></div>
