Added publication reference

--- a/predictionUI/html/index.html
+++ b/predictionUI/html/index.html
@@ -80,8 +80,10 @@
    
     <p>
     <b>A confidence predictor for logD using conformal regression and a support-vector machine</b><br>
-    Maris Lapins, Staffan Arvidsson, Samuel Lampa, Arvid Berg, Wesley Schaal, Jonathan Alvarsson and Ola Spjuth<br>
-    [<i>Submitted</i>]
+    Maris Lapins, Staffan Arvidsson, Samuel Lampa, Arvid Berg, Wesley Schaal, Jonathan Alvarsson and Ola Spjuth
+    <i>Journal of Cheminformatics</i> 10.1 (2018): 17.
+    <br>
+    <a href="https://link.springer.com/article/10.1186/s13321-018-0271-1">https://link.springer.com/article/10.1186/s13321-018-0271-1</a> 
     </div>
  
     <div id="jsme_container" style="width=57%; float=left;"></div>
