--- a/predictionUI/html/index.html
+++ b/predictionUI/html/index.html
@@ -25,16 +25,16 @@
     }
 
     function redraw() {
-        var smiles = jsmeApplet.smiles()
+        var molFile = encodeURIComponent(jsmeApplet.molFile(true))
         var confidence = document.getElementById('confidence').value
-        window.setTimeout( function() { doRedraw(smiles, confidence) }, 100 );
+        window.setTimeout( function() { doRedraw(molFile, confidence) }, 100 );
     }
 
-    function doRedraw(smiles, confidence) {
-        if ( smiles != jsmeApplet.smiles() || confidence != document.getElementById('confidence').value) {
+    function doRedraw(molFile, confidence) {
+        if ( molFile != encodeURIComponent(jsmeApplet.molFile(true)) || confidence != document.getElementById('confidence').value) {
             return;
         }
-        var imageurl = "https://cplogd.service.pharmb.io/v1/predictionImage?smiles=" + jsmeApplet.smiles() 
+        var imageurl = "https://cplogd.service.pharmb.io/v1/predictionImage?molecule=" + encodeURIComponent(jsmeApplet.molFile(true)) 
                      + "&imageWidth="  + Math.floor(window.innerWidth*0.9) 
                      + "&imageHeight=" + Math.floor(window.innerHeight*0.40-45-75)
                      + "&addTitle=true" 
